[project]
name = "active-bom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
]

[project.scripts]
active-bom = "active_bom:main"

[tool.setuptools]
py-modules = ["active_bom"]
